Update .env.example - remove obsolete MAIL_FROM and add MAIL_VERIFY_SSL_PEER
Followup to https://github.com/Bubka/2FAuth/issues/245#issuecomment-1823913412.

--- a/.env.example
+++ b/.env.example
@@ -122,13 +122,13 @@ MYSQL_ATTR_SSL_CA=
 MAIL_DRIVER=log
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_FROM=changeme@example.com
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_NAME=null
 MAIL_FROM_ADDRESS=null
-
+# Set MAIL_VERIFY_SSL_PEER=false if not using SSL for email
+MAIL_VERIFY_SSL_PEER=true
 
 #### API settings ####
 
